--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "node-cron": "^4.0.7",
     "nodemailer": "^6.10.0",
     "otp-generator": "^4.0.1",
     "stripe": "^17.7.0"
